fixed flickering upon changelog page load

--- a/css/styles.css
+++ b/css/styles.css
@@ -790,6 +790,30 @@ video {
   height: 5rem;
 }
 
+.h-60 {
+  height: 15rem;
+}
+
+.h-80 {
+  height: 20rem;
+}
+
+.h-96 {
+  height: 24rem;
+}
+
+.h-\[40rem\] {
+  height: 40rem;
+}
+
+.h-\[60rem\] {
+  height: 60rem;
+}
+
+.h-\[50rem\] {
+  height: 50rem;
+}
+
 .max-h-\[85vh\] {
   max-height: 85vh;
 }
